Created login method in the API

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DatingApp.db"
   },
+  "AppSettings": {
+    "Token" : "super secret key"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
