--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
     "@fortawesome/fontawesome-free": "^5.9.0",
+    "alertifyjs": "^1.11.4",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
