--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -23,7 +23,9 @@
     "@fortawesome/fontawesome-free": "^5.9.0",
     "alertifyjs": "^1.11.4",
     "bootstrap": "^4.3.1",
+    "bootswatch": "^4.3.1",
     "jquery": "^3.4.1",
+    "ngx-bootstrap": "^5.1.0",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
