--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -26,6 +26,7 @@
     "bootswatch": "^4.3.1",
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^5.1.0",
+    "ngx-gallery": "^5.10.0",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
