Added cloudinay for photo storing

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dqbkia8sg",
+    "ApiKey": "623485634288395",
+    "ApiSecret": "pHdHlZYU8t4RfklzH63Sy3RgFo8"
+  }
 }
