--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.3.1",
     "bootswatch": "^4.3.1",
     "jquery": "^3.4.1",
+    "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^5.1.0",
     "ngx-gallery": "^5.10.0",
     "popper.js": "^1.15.0",
