Swapped backend to using MySQL database

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DatingApp.db"
+    "DefaultConnection": "Server=localhost; Database=datingApp; Uid=appuser; Pwd=password"
   },
   "AppSettings": {
     "Token" : "super secret key"
